--- a/style.css
+++ b/style.css
@@ -3,3 +3,9 @@
   box-shadow: none;
   border: none;
 }
+
+.ui.borderless.middlemenu.menu {
+  background-color: #FFFFFF;
+  box-shadow: none;
+  border: none;
+}
