--- a/style.css
+++ b/style.css
@@ -3,3 +3,15 @@
   box-shadow: none;
   border: none;
 }
+
+.ui.borderless.middlemenu.menu {
+  background-color: #FFFFFF;
+  box-shadow: none;
+  border: none;
+}
+
+.footer-background {
+  background-color: #292929;
+  padding: 50px 0 50px 0;
+  color: #FFFFFF;
+}
